feat(forum): add delete comment, delete post